Bug 1128457 - Change handling of urgent messages during timeout (r=dvander)